<resources>
    <string name="app_name">Recomendo</string>

    <string name="start">Lets Go</string>
    <string name="Opening">Welcome To Reccomendo!</string>


    <string name="Reg">First Will Need Some Information To Get Started !</string>
    <string name="edittext_hint"><font size="20">Name</font></string>
    <string name="age_hint"><font size="20">Age</font></string>
    <string name="genre">Select Preferred Genre</string>
    <string name="epilen">Select Preferred Episode Length </string>
    <string name="end">Next</string>

    <string name="rand">Random String</string>
    <string name="search">Find A Show…</string>
    <string name="menuSearch">Search</string>
    <string name="done">done</string>

    <string name="givea">Give This One A Try!</string>
    <string name="name">Name</string>
    <string name="desc">Show Description</string>
    <string name="seas">10 Seasons</string>
    <string name="episeas">108 Episodes</string>
    <string name="rate">Rating</string>
    <string name="gen">Genre</string>
    <string name="date">Air Date</string>
    <string name="Net">Network</string>

    <string name="btnl">Next</string>
    <string name="btnm">Watched</string>
    <string name="btnr">Try</string>

    <string name="popbtn">Got It!</string>
    <string name="pop">Great Now Select Shows You Like\nYou Can Find Any Show Using The Search Bar</string>

    <string name="loadtxt">One Moment Please We Are Doing Our Thing…</string>

    <string name="reconnect">Try To Connect</string>

    <string name="OPS">Oops, something went wrong…</string>

    <string name="tryagain">Lets Try Again</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="MyS">Watched Shows</string>
    <string name="statistic">Statistics</string>
    <string name="discover">Discover</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nomore">We Have No More Recommendations…</string>
    <string name="listg">Go Back</string>
    <string name="homeg">Home Page</string>

    <string name="finish">Finish</string>
    <string name="fini">Are You Finished?</string>
    <string name="finreg">Yes!</string>

    <string name="suredel">Are Sure You Want To Remove </string>
    <string name="surey">Yes</string>
    <string name="suren">No</string>
    <string name="rm">Remove</string>

    <string name="stat">status</string>
    <string name="netand">network and airing</string>

    <string name="alreadyinreco">You Can not Add</string>
    <string name="alreadyinrec">\nBecause Its In Your Home List.\nPress The Like Button Instead</string>

    <string name="opini">Hi What Are Your Thoughts On This One?</string>
    <string name="likes">Like</string>
    <string name="diss">Dislike</string>

    <string name="homepg">Home Page</string>

    <string name="webS">Web Search</string>
    <string name="tvS">TMDb</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="wtachShows">Watched Shows</string>
    <string name="numb">123</string>
    <string name="returning">Returning Shows</string>
    <string name="endedS">Ended Shows</string>
    <string name="cancelS">Canceled Shows</string>
    <string name="episString">Watched Episodes</string>
    <string name="totalT">Total Watch Time</string>
    <string name="recoTextS">Recommendations</string>
    <string name="likeR">Liked Shows</string>
    <string name="disR">Disliked Shows</string>
    <string name="notRated">Not Rated</string>
    <string name="recoStat">Recommendations Status</string>
    <string name="appWatchT">~Is Your Approximate Watch Time~</string>

    <string name="emptyList">You Have No Recommendations!</string>

    <string name="play">Play Trailer</string>

    <string name="stream">Stream</string>
    <string name="min">45 min</string>

    <string name="expand">Show More</string>

    <string name="nomoresmall">Try Changing The Filters (Genre or Episode Length) Through The Setting Or Adding More Relevant Shows To You\'re Watched Shows Tabs</string>

    <string name="welcomeback">Welcome Back!</string>

    <string name="dissmiss">Dismiss</string>
    <string name="year">Year</string>
    <string name="explore">Trending</string>

    <string name="Trend">Trending</string>
    <string name="popular">Popular</string>
    <string name="Rated">Top Rated</string>

    <string name="scorepop">Popularity</string>
    <string name="recfinals">Score</string>

    <string name="Powered">Powered By</string>
    <string name="poweredfull">This product uses the TMDb API but is not endorsed or certified by TMDb</string>
    <string name="add">Add</string>


    <string name="retbtn">Go Back</string>

    <string name="appver">1.1</string>


</resources>