<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/delete_round"
    tools:context=".Activities.FinalPage"
    android:padding="16dp">

    <TextView
        android:id="@+id/deleteT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfprobold"
        android:gravity="center"
        android:text="@string/suredel"
        android:textColor="@color/Text"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="2">

        <Button
            android:id="@+id/button_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttonwhite"
            android:fontFamily="@font/sfpro"
            android:text="@string/suren"
            android:textColor="@color/Text"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:fontFamily="@font/sfpro"
            android:text="@string/surey"
            android:textColor="@color/Text"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>