<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:background="@drawable/quick_info_corners"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/quick_info_corners">

        <androidx.cardview.widget.CardView
            android:id="@+id/quickcard"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:foregroundGravity="center"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/quickimage"
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/rand" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/quick_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sfprobold"
            android:singleLine="true"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/quickcard"
            app:layout_constraintTop_toTopOf="@+id/quickcard"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/quickrating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sfprobold"
            android:text="@string/rate"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/star"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/star"
            app:layout_constraintTop_toTopOf="@+id/star"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/quickyear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sfprobold"
            android:text="@string/year"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/quick_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/quickcard"
            app:layout_constraintTop_toBottomOf="@+id/quick_name"
            app:layout_constraintVertical_bias="0.0" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/star"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/quick_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/quickcard"
            app:layout_constraintTop_toBottomOf="@+id/quickyear"
            app:layout_constraintVertical_bias="0.0"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/star_d"
            app:lottie_speed="0.5" />

        <at.blogc.android.views.ExpandableTextView
            android:id="@+id/quickdesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:maxLines="16"
            android:ellipsize="end"
            app:animation_duration="250"
            android:text="@string/desc"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/quick_name"
            app:layout_constraintStart_toStartOf="@+id/quickcard"
            app:layout_constraintTop_toBottomOf="@+id/quickcard"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/quickexpand"
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:visibility="gone"
            android:background="@null"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:fontFamily="@font/sfprobold"
            android:text="@string/expand"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/quickdesc"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/quickdesc"
            app:layout_constraintTop_toBottomOf="@+id/quickdesc"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/quickdiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button"
            android:text="@string/dissmiss"
            android:textColor="@color/Text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/quickdesc"
            app:layout_constraintStart_toStartOf="@+id/quickdesc"
            app:layout_constraintTop_toBottomOf="@+id/quickexpand"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
